--- a/frontend/index.html
+++ b/frontend/index.html
@@ -208,9 +208,9 @@ The quick brown fox jumps over the lazy dog</textarea
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/vexflow@4.2.2/build/cjs/vexflow.js"></script>
-    <script src="https://unpkg.com/@tonejs/midi@2.0.28/build/Midi.js"></script>
-    <script src="https://surikov.github.io/webaudiofont/npm/dist/WebAudioFontPlayer.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/vexflow@4.2.2/build/cjs/vexflow.js"></script>
+    <script defer src="https://unpkg.com/@tonejs/midi@2.0.28/build/Midi.js"></script>
+    <script defer src="https://surikov.github.io/webaudiofont/npm/dist/WebAudioFontPlayer.js"></script>
     <script type="module" src="/js/app.js"></script>
   </body>
 </html>
